src/objects/ContCarrAssoc__c.object
<CustomObject>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <referenceTo>Carrier__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>R00N40000001hQGxEAM</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contract_Carrier_External_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contract_Carrier External Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Carriers</relationshipLabel>
        <relationshipName>R00N40000001hQGkEAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract Carrier</label>
    <nameField>
        <displayFormat>ContCarr-{0000}</displayFormat>
        <label>Contract Carrier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Carriers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>